SEM-ISSUE - cria index e .gitignore

--- a/index.html
+++ b/index.html
@@ -1,7 +1,8 @@
 <html>
 <head>
-    <script type="text/javascript" src="http://code.jquery.com/jquery-latest.min.js"></script>
+    <script type="text/javascript" src="https://code.jquery.com/jquery-latest.min.js"></script>
     <script>
+
         function loadSource(url) {
             $.ajax({
                 url: url,
